# SungsimdangBot

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/skills/sungsimdangbot-checks/: SKILL.md
.agents/skills/sungsimdangbot-checks/agents/: openai.yaml
.agents/skills/sungsimdangbot-development/: SKILL.md
.agents/skills/sungsimdangbot-development/agents/: openai.yaml
.agents/skills/sungsimdangbot-git/: SKILL.md
.agents/skills/sungsimdangbot-git/agents/: openai.yaml
.claude/commands/: check.md  lint.md  run.md  test.md
.claude/rules/: code-style.md  commit.md  deployment.md  docker-local.md  pull-request.md  settings.md
.github/workflows/: cd.yml  ci.yml  deployment.yml
conf/: config.py
config/: config.py
modules/: admin.py  api_models.py  calculator.py  database.py  db_manager.py  features_hub.py  gaechu_info.py  gemini_chat.py  laftel.py  log.py  migration.py  pseudo code.txt  ramdom_based.py  random_based.py  river_temp.py  settings.py  test.py  utils.py  web_based.py
modules/ai/: chat.py
modules/ai/providers/: base.py  gemini.py  openai.py
resources/: strings.py  test.py  users.py
scripts/: detect_mojibake.py  launch.sh
tests/: conftest.py  test_admin.py  test_ai_chat.py  test_ai_gemini.py  test_ai_openai.py  test_api_models.py  test_calculator.py  test_config.py  test_database.py  test_encoding.py  test_features_hub.py  test_gemini_chat.py  test_handlers.py  test_laftel.py  test_log.py  test_migration.py  test_random_based.py  test_settings.py  test_web_based.py
