[project]
name = "sungsimdangbot"
version = "1.0.0"
description = "Telegram bot with various utility features"
requires-python = ">=3.9"
dependencies = [
    "pyTelegramBotAPI>=4.14",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=7.0",
    "pre-commit>=3.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
